--- a/src/main/resources/templates/testing.html
+++ b/src/main/resources/templates/testing.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h3>Human testing</h3>
-<div id="app"></div>
-<script th:src="${isDevMode} ? 'http://localhost:8000/main.js' : '/js/main.js'"></script>
+<div id="quest"></div>
+<script th:src="'http://localhost:8000/answerQuest.js'"></script>
 </body>
 </html>
